AURA-284: Use URL not URI (hibernate throws stream corrupted exception)